--- a/html/Start.html
+++ b/html/Start.html
@@ -20,7 +20,7 @@
       <div id="container" class="snap">
       <section id="section1">
         <header>
-                <strong>Made by<br><em>Arthur</em></strong>
+                <strong><br><em>Arthur's</em>Site</strong>
                 <a href="">&#8226; Projects</a>
                 <a href="">&#8226; GitHub</a>
                 <a href="">&#8226; Twitter</a>
