--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class"mysection">
       <section id="section1">
         <header>
-          <strong>Made by<br><em>Arthur</em></strong>
+          <strong><br><em>Arthur's</em>Site</strong>
           <a href="">&#8226; Projects</a>
           <a href="">&#8226; GitHub</a>
           <a href="">&#8226; Twitter</a>
