--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
 
 
-    <div class"mysection">
+    <div class="mysection">
       <section id="section1">
         <header>
           <strong><br><em>Arthur's</em>Site</strong>
@@ -35,10 +35,10 @@
 
 
         <span class="text">
-          <h1>Nuit de l'info édition 2020</h1>
+          <h1>Site en construction</h1>
           <!--<img class="" src="img/python.jpg" alt="image python">-->
           <p>
-            Le 3 décembre 2020, j'ai participé à la nuit de l'informatique, je vous propose de découvrir le projet que nous avons réalisé lors de cet évenement.
+            Ce site contiendra tous mes futurs projets
           </p>
         </span>
       </section>
@@ -46,7 +46,7 @@
 
 
 
-    <div class"mysection">
+    <div class="mysection">
       <section id="section2">
 
 
@@ -60,7 +60,7 @@
 
 
 
-    <div class"mysection">
+    <div class="mysection">
       <section id="section3">
 
         <span class="text">
